--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ems-backend
+spring.application.name=backend
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/ems
 spring.datasource.username=root
